fix: correcoes de erros no rent e no customer